--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,8 @@ nalgebra = "0.18.1"
 ncollide2d = "0.20.1"
 
 # logging
-tracing = "0.1.9"
-tracing-attributes = "0.1.3"
-tracing-subscriber = "0.1.3"
-tracing-log = "0.1.0"
+log = "0.4"
+pretty_env_logger = "0.3"
 
 # CLI
 structopt = "0.3.2"
